objects/DemoCustomSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Test__c</fullName>
        <label>Test</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Testing2__c</fullName>
        <label>TestNum</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TestingUrl__c</fullName>
        <label>TestingUrl</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Testing__c</fullName>
        <label>Testing1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>DemoCustomSettings</label>
</CustomObject>